# subscriprion_app

./: Cargo.toml  README.md  sub_file
src/: main.rs  subscription.rs  subscription_app.rs  tui_entry.rs  visit.rs
