[package]
name = "subscription_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde 
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

# time 
chrono = { version = "0.4.31", features = ["serde"] }

# money
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"

# errors
anyhow = "1.0.79"

# tui
ratatui = "0.25.0"
crossterm = "0.27.0"
